@@ -11,6 +11,10 @@
     <url>https://github.com/debe/libfindchars</url>
 
     <properties>
+        <javasmt-solver-z3.version>4.16.0</javasmt-solver-z3.version>
+        <!-- Extra surefire JVM args; CI overrides this to point
+             java.library.path at downloaded Z3 natives. -->
+        <z3.argline></z3.argline>
         <flatten-maven-plugin.version>1.7.3</flatten-maven-plugin.version>
         <maven-source-plugin.version>3.4.0</maven-source-plugin.version>
         <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
@@ -66,6 +70,11 @@
 	        <plugins>
 	            <plugin>
 	                <groupId>org.apache.maven.plugins</groupId>
+	                <artifactId>maven-jar-plugin</artifactId>
+	                <version>3.4.2</version>
+	            </plugin>
+	            <plugin>
+	                <groupId>org.apache.maven.plugins</groupId>
 	                <artifactId>maven-compiler-plugin</artifactId>
 	                <version>3.15.0</version>
 
@@ -90,8 +99,7 @@
 	                    <!-- [#2413] Make compiler warnings a bit more visible
 	                         But don't fail (yet) -->
 	                    <compilerArgs>
-	                        <arg>--enable-preview</arg>
-	                        <arg>--add-modules=ALL-SYSTEM</arg>
+	                        <arg>--add-modules=jdk.incubator.vector</arg>
 	                    </compilerArgs>
 	                    <annotationProcessorPaths>
 				        <path>
@@ -107,7 +115,7 @@
 				    <artifactId>maven-surefire-plugin</artifactId>
 	                <version>3.5.5</version>
 				    <configuration>
-				      <argLine>--enable-preview --add-modules=jdk.incubator.vector --add-modules=ALL-SYSTEM --enable-native-access=ALL-UNNAMED</argLine>
+				      <argLine>--add-modules=jdk.incubator.vector --enable-native-access=ALL-UNNAMED ${z3.argline}</argLine>
 				    </configuration>
 				   <dependencies>
 	                <dependency>
@@ -186,7 +194,6 @@
 	                    <configuration>
 	                        <release>25</release>
 	                        <additionalJOptions>
-	                            <additionalJOption>--enable-preview</additionalJOption>
 	                            <additionalJOption>--add-modules=jdk.incubator.vector</additionalJOption>
 	                        </additionalJOptions>
 	                        <encoding>UTF-8</encoding>
